--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ django-extensions==1.5.6
 django-filter==0.11.0
 Django==1.8.4
 djangorestframework==3.2.3
+django-cors-headers==1.1.0
+django-phonenumber-field==0.7.2
 gunicorn==19.3
 Markdown==2.6.2
 newrelic==2.54.0.41
@@ -13,3 +15,4 @@ pytz==2015.4
 six==1.9.0
 whitenoise==2.0.3
 wsgiref==0.1.2
+wheel==0.24.0
